--- a/src/app/components/examples/table-primeng-example/table-primeng-example.component.html
+++ b/src/app/components/examples/table-primeng-example/table-primeng-example.component.html
@@ -1,6 +1,6 @@
 <p-card header="Table CRUD">
   <app-table-primeng
-    [titleTable]="'Basic'"
+    [titleTable]="'Name Table'"
     [data]="data"
     [objectExample]="objectExample"
     [columns]="columns"
