--- a/src/app/components/examples/charts-example/charts-example.component.html
+++ b/src/app/components/examples/charts-example/charts-example.component.html
@@ -41,5 +41,10 @@
             </app-button-primeng>
             <p-chart type="line" [data]="lineStylesData" [options]="basicLineOptions"></p-chart>
         </p-accordionTab>
+        <p-accordionTab header="Polar Area">
+            <app-button-primeng (onClick)="changesTheme()" [label]="labelButtonTheme" [rounded]="true">
+            </app-button-primeng>
+            <p-chart type="polarArea" [data]="polarAreaData" [options]="basicPolarAreaOptions" [style]="{'width': '20%'}"></p-chart>
+        </p-accordionTab>
     </p-accordion>
 </p-card>
