--- a/src/app/components/examples/charts-example/charts-example.component.html
+++ b/src/app/components/examples/charts-example/charts-example.component.html
@@ -38,7 +38,7 @@
         <p-accordionTab header="Doughnut">
             <app-button-primeng (onClick)="changesTheme()" [label]="labelButtonTheme" [rounded]="true">
             </app-button-primeng>
-            <p-chart type="doughnut" [data]="basicDoughnutData" [options]="chartDoughnutOptions"
+            <p-chart type="doughnut" [data]="doughnutData" [options]="basicDoughnutOptions"
                 [style]="{'width': '20%'}"></p-chart>
         </p-accordionTab>
         <p-accordionTab header="Polar Area">
@@ -56,6 +56,11 @@
             <app-button-primeng (onClick)="changesTheme()" [label]="labelButtonTheme" [rounded]="true">
             </app-button-primeng>
             <p-chart type="radar" [data]="radarData" [options]="basicRadarOptions" [style]="{'width': '20%'}"></p-chart>
+        </p-accordionTab>
+        <p-accordionTab header="Combo">
+            <app-button-primeng (onClick)="changesTheme()" [label]="labelButtonTheme" [rounded]="true">
+            </app-button-primeng>
+            <p-chart type="bar" [data]="comboData" [options]="basicComboOptions"></p-chart>
         </p-accordionTab>
     </p-accordion>
 </p-card>
