save changes by merge with cris - check commit later

--- a/src/app/components/examples/charts-example/charts-example.component.html
+++ b/src/app/components/examples/charts-example/charts-example.component.html
@@ -38,24 +38,23 @@
         <p-accordionTab header="Doughnut">
             <app-button-primeng (onClick)="changesTheme()" [label]="labelButtonTheme" [rounded]="true">
             </app-button-primeng>
-            <p-chart type="doughnut" [data]="doughnutData" [options]="basicDoughnutOptions"
-                [style]="{'width': '20%'}"></p-chart>
+            <p-chart type="doughnut" [data]="doughnutData" [options]="basicDoughnutOptions">
+            </p-chart>
         </p-accordionTab>
         <p-accordionTab header="Polar Area">
             <app-button-primeng (onClick)="changesTheme()" [label]="labelButtonTheme" [rounded]="true">
             </app-button-primeng>
-            <p-chart type="polarArea" [data]="polarAreaData" [options]="basicPolarAreaOptions"
-                [style]="{'width': '20%'}"></p-chart>
+            <p-chart type="polarArea" [data]="polarAreaData" [options]="basicPolarAreaOptions"></p-chart>
         </p-accordionTab>
         <p-accordionTab header="Pie">
             <app-button-primeng (onClick)="changesTheme()" [label]="labelButtonTheme" [rounded]="true">
             </app-button-primeng>
-            <p-chart type="pie" [data]="pieData" [options]="basicPieOptions" [style]="{'width': '20%'}"></p-chart>
+            <p-chart type="pie" [data]="pieData" [options]="basicPieOptions"></p-chart>
         </p-accordionTab>
         <p-accordionTab header="Radar">
             <app-button-primeng (onClick)="changesTheme()" [label]="labelButtonTheme" [rounded]="true">
             </app-button-primeng>
-            <p-chart type="radar" [data]="radarData" [options]="basicRadarOptions" [style]="{'width': '20%'}"></p-chart>
+            <p-chart type="radar" [data]="radarData" [options]="basicRadarOptions"></p-chart>
         </p-accordionTab>
         <p-accordionTab header="Combo">
             <app-button-primeng (onClick)="changesTheme()" [label]="labelButtonTheme" [rounded]="true">
